# bidslake

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md  ingest_50_datasets.sh  prek.toml
.github/workflows/: ci.yml
benches/: ingest.rs
crates/bids-core/: Cargo.toml
crates/bids-core/src/: entities.rs  filetree.rs  inheritance.rs  lib.rs
crates/bids-schema/: Cargo.toml  build.rs
crates/bids-schema/data/: ingestion-metaschema.json  term-mapping-metaschema.json
crates/bids-schema/data/ingestion/: base.json  freesurfer.json
crates/bids-schema/data/overlays/: fmriprep.json  freesurfer.json  mriqc.json  qsiprep.json
crates/bids-schema/data/term-maps/: freesurfer.json
crates/bids-schema/src/: associations.rs  context.rs  datatypes.rs  expression.rs  lib.rs  overlay.rs  term_map.rs
crates/bids-schema/tests/: expression_conformance.rs
crates/bids-validator-rs/: Cargo.toml  README.md  build.rs
crates/bids-validator-rs/benches/: validation_benchmark.rs
crates/bids-validator-rs/docs/: warning-parity.md
crates/bids-validator-rs/src/: associations.rs  config.rs  context.rs  datatypes.rs  expression.rs  issues.rs  lib.rs  main.rs  schema.rs  validator.rs
crates/bids-validator-rs/src/data/: metaschema.json
crates/bids-validator-rs/src/files/: bval.rs  gzip.rs  json.rs  mod.rs  nifti.rs  tiff.rs  tsv.rs
crates/bids-validator-rs/src/rules/: checks.rs  dataset_metadata.rs  directories.rs  entities.rs  files.rs  json.rs  mod.rs  sidecars.rs  tabular_data.rs
crates/bids-validator-rs/src/rules/errors/: bval_bvec.rs  dataset.rs  empty_file.rs  gzip.rs  hed.rs  json.rs  mod.rs  nifti.rs  system.rs  tsv.rs
crates/bids-validator-rs/tests/: expression_conformance.rs  integration_test.rs  warning_parity.rs
crates/bids-validator-rs/tests/common/: mod.rs
crates/bids-validator-rs/tests/data/: bids-examples  bids-examples-config.json
crates/bids-validator-rs/tests/rules/: checks.rs  dataset_metadata.rs  directories.rs  entities.rs  errors.rs  files.rs  json.rs  mod.rs  sidecars.rs  tabular_data.rs
crates/bidslake/: Cargo.toml  README.md
crates/bidslake-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/bidslake-py/python/bidslake/: __init__.py  _arrow.py  _bidslake.pyi  _lazy.py  _sql.py  file.py  layout.py  paths.py  relations.py  stubgen.py
crates/bidslake-py/python/bidslake/schema/: __init__.py  _generated.py
crates/bidslake-py/src/: lib.rs
crates/bidslake-py/tests/: conftest.py  test_adapter.py  test_codegen.py  test_get.py  test_lazy.py  test_metadata.py  test_overlay.py  test_paths.py  test_related.py  test_smoke.py  test_sql.py  test_typing.py
crates/bidslake-py/tests/typecheck/: invalid_usage.py
crates/bidslake/benches/: ingest.rs
crates/bidslake/src/: bids.rs  db.rs  fs.rs  lib.rs  links.rs  main.rs  s3.rs  schema.rs
crates/bidslake/src/readers/: freesurfer_ctab.rs  freesurfer_stats.rs  mod.rs
crates/bidslake/src/schema/: dynamic.rs  ingestion.rs  tabular.rs
crates/bidslake/tests/: bids-examples  curated.rs  entities.rs  s3_ingest.rs  tabular_coverage.rs  tabular_row_order.rs  test_adapter_freesurfer.rs  test_bids_inheritance.rs  test_cli.rs  test_datafiles.rs  test_dataset_links.rs  test_diffusion_arrays.rs  test_events_na.rs  test_metadata_only_records.rs  test_na_conversion.rs  test_nested_bidsignore.rs  test_openneuro_features.rs  test_overlay.rs  test_participants_na.rs  test_pk_error.rs  test_scans_file_path.rs  test_structural_associations.rs
crates/bidslake/tests/common/: mod.rs
crates/hed-validator-rs/: Cargo.toml  README.md
crates/hed-validator-rs/src/: data.rs  errors.rs  lib.rs  main.rs  models.rs  parser.rs  reserved.rs
crates/hed-validator-rs/src/data/: reserved_tags.json
crates/hed-validator-rs/src/schema/: collection.rs  compliance.rs  json_parser.rs  loader.rs  mod.rs  model.rs  wiki_parser.rs
crates/hed-validator-rs/src/validator/: char_validator.rs  def_validator.rs  duplicate_checker.rs  group_validator.rs  mod.rs  onset_validator.rs  sidecar_validator.rs  tabular_validator.rs  tag_validator.rs  unit_validator.rs
crates/hed-validator-rs/tests/: schema_tests.rs  validation.rs
docs/: managed-mode.md  schema.md  workflow.md
docs/adr/: 0001-schema-augmentation-overlays.md  0002-layout-adapters.md  0003-cross-dataset-association.md
src/: bids.rs  db.rs  fs.rs  lib.rs  main.rs  s3.rs  schema.rs
src/data/: schema.json
src/schema/: dynamic.rs  tabular.rs
tests/: curated.rs  entities.rs  integration_openneuro.rs  smoke_bids_examples.rs  test_bids_inheritance.rs  test_diffusion_arrays.rs  test_events_na.rs  test_na_conversion.rs  test_openneuro_features.rs  test_participants_na.rs  test_pk_error.rs  test_quality_features.rs  test_scans_file_path.rs
tests/common/: mod.rs
tools/: vendor-schema.sh
