[package]
name = "bidslake"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
duckdb = { version = "1.0", features = ["bundled"] }
walkdir = "2.5"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
tokio = { version = "1.48", features = ["full"] }
aws-sdk-s3 = { version = "1.15" }
aws-config = { version = "1.1" }
futures = "0.3"
ignore = "0.4.28"

[dev-dependencies]
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"
walkdir = "2.5"
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "ingest"
harness = false

[features]
default = []
