[workspace]
members = ["crates/bids-core", "crates/bids-schema", "crates/bidslake", "crates/bids-validator-rs", "crates/hed-validator-rs"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52", features = ["full"] }
regex = "1"
ignore = "0.4.28"
clap = { version = "4.6", features = ["derive"] }
thiserror = "2"
futures = "0.3"
