[package]
name = "bids-validator-rs"
version = "0.1.0"
edition = "2024"
description = "A pure Rust BIDS (Brain Imaging Data Structure) validator"
license = "MIT"

[[bin]]
name = "bids-validator"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
thiserror = "2"
tokio = { version = "1.52.3", features = ["full"] }
futures = "0.3.32"
flate2 = "1.1.9"
ignore = "0.4.27"
async-trait = "0.1"
hed-validator-rs = { path = "../hed-validator-rs" }
bids-core = { path = "../bids-core" }
bids-schema = { path = "../bids-schema" }
quick-xml = "0.37"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"
rlimit = "0.10"

[[bench]]
name = "validation_benchmark"
harness = false
