[package]
name = "bidslake"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
duckdb = { version = "1.0", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1.0"
tokio = { workspace = true }
aws-sdk-s3 = { version = "1.15" }
aws-config = { version = "1.1" }
futures = { workspace = true }
ignore = { workspace = true }
sha2 = "0.10"
bids-core = { path = "../bids-core" }
bids-schema = { path = "../bids-schema" }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
bids-core = { path = "../bids-core" }
bids-schema = { path = "../bids-schema" }
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "ingest"
harness = false

[features]
default = []
