[package]
name = "hed-validator-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[dev-dependencies]
glob = "0.3.3"
serde_json = "1.0.150"
